Fix username alias horizontal overflow

--- a/DevilDaggersWebsite.Razor/wwwroot/styles/leaderboard-player.css
+++ b/DevilDaggersWebsite.Razor/wwwroot/styles/leaderboard-player.css
@@ -51,3 +51,17 @@
 div > .player-section-list-link:nth-child(2n) {
 	background-color: var(--col-gray-11);
 }
+
+.player-section-list > li {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	-epub-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-epub-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
+}
